examples/test/testpolicy15855.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15855
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key18: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value17
          key18: value17
      podSelector:
        matchLabels:
          key35: value31
          key45: value35
